# intelligent-terminal

./: .gitignore  CONTRIBUTING.md  OpenConsole.slnx  README.md  SUPPORT.md  TelemetryEvents.md  _build_msix_arm64.cmd  _build_msix_x64.cmd  intelligent-terminal.code-workspace
.github/instructions/: copilot-pr-review-loop.instructions.md  rust-localization.instructions.md  rust-wta.instructions.md
.github/skills/copilot-pr-review-loop/: SKILL.md
.github/skills/upstream-sync/: SKILL.md
.github/upstream-sync/: .gitignore  state.json
dep/vcpkg-overlay-triplets/: x64-windows-static.cmake
doc/: configuring-powershell-autofix.md  configuring-shell-integration-autofix.md  faq.md  installing-dependencies.md  known-issues.md  release-automation-plan.md  release-check-list.md  release-ut-plan.md
doc/specs/: hookless-agent-session-tracking.md  hybrid-agent-session-tracking.md  rtl-investigation.md  wta-launched-cli-session-binding.md
doc/specs/inline-suggest/: 01-plan.md  02-architecture.md  (+3 more)
installer/: install-local-terminal.ps1  uninstall-local-terminal.ps1
installer/bootstrap/: Cargo.toml
policies/: IntelligentTerminal.admx
policies/en-US/: IntelligentTerminal.adml
src/: common.build.pre.props
tools/: OpenConsole.psm1
tools/wta/: AGENTS.md  Cargo.toml  build.rs
tools/wta/fuzz/: Cargo.toml
tools/wta/fuzz/fuzz_targets/: cmdline_builder.rs
wta/: AGENTS.md  Cargo.toml  OVERVIEW.md  README.md
wta/prompts/: auto-fix.md  terminal-agent.md
wta/src/: agent_hooks_installer.rs  app.rs  coordinator.rs  event.rs  main.rs  osc52.rs  shared_host.rs  theme.rs
(+436 files in other folders)
